--- a/mv.html
+++ b/mv.html
@@ -57,22 +57,22 @@
 
       <div class="art-display"><br>
         <div class="half-image loading-icon">
-          <img src="https://cdn.discordapp.com/attachments/926858719684354058/1215723905478819910/achivements.gif?ex=66103f1e&is=65fdca1e&hm=2f10a5b4d7eaebfcddfe58d0375509accd63f620b1fcb99540adf44ccbe995bf&">
+          <img src="https://64.media.tumblr.com/d623b8dc501e0889724de448b90148f1/8b22d823c8e67388-94/s540x810/9500c67b47d79f3b428754af1d075997e51dcffa.gifv">
         </div>
         <div class="half-image loading-icon">
-          <img src="https://cdn.discordapp.com/attachments/926858719684354058/1215723911283740754/blaze_through.gif?ex=66103f1f&is=65fdca1f&hm=0ba5ac3a812802a81954656acaa3c1f153be6e89875de4a1ca9fa7da4c452408&">
+          <img src="https://64.media.tumblr.com/5f84a95fbb6c9294f7acd6525efcea85/8b22d823c8e67388-5d/s540x810/3404152beceaf6483655e83447ec055704b93af1.gifv">
         </div>
       <div class="half-image loading-icon">
-        <img src="https://cdn.discordapp.com/attachments/926858719684354058/1215723911858229248/communing_trail.gif?ex=66103f1f&is=65fdca1f&hm=f001c600e9448a49232069440671b28af3b9ef0ae153de683f1efa906c9d3525&">
+        <img src="https://64.media.tumblr.com/f01ee811e4d02a4a9ef5daa33716788f/8b22d823c8e67388-9b/s540x810/0bc6bc7f338dcb90f232a3e863bc0152858aa6de.gifv">
       </div>
       <div class="half-image loading-icon">
-        <img src="https://cdn.discordapp.com/attachments/926858719684354058/1215723912634040410/despondent.gif?ex=66103f1f&is=65fdca1f&hm=a4e6810c0056a7f1d485b442274d44ebb9f7c2748456848f603f2175a9d068bf&">
+        <img src="https://64.media.tumblr.com/0ecf727380237b9b38f1569e9ff33ccc/8b22d823c8e67388-a4/s540x810/b9c47299200ab50e81540a00619a929c221c97c9.gifv">
       </div>
       <div class="half-image loading-icon">
-        <img src="https://cdn.discordapp.com/attachments/926858719684354058/1215723913145749535/eidolon.gif?ex=66103f1f&is=65fdca1f&hm=5209d2aaec962d2f9e7c2d149e7ea5ffb4b127d4e66a91985390346fc6033097&">
+        <img src="https://64.media.tumblr.com/c55c18f96438497c8c90154c9dc230b3/8b22d823c8e67388-a0/s540x810/66f1cbc65ff7e38d1a0da7b2463f6244ab561a6d.gifv">
       </div>
       <div class="half-image loading-icon">
-        <img src="https://cdn.discordapp.com/attachments/926858719684354058/1215723913913573437/lightcone-gif.gif?ex=66103f20&is=65fdca20&hm=7354cf8656b47e12f3aaac9fca627ad5c7637fdc0c682d723053852e5bb443b9&">
+        <img src="https://64.media.tumblr.com/5b8d93c8cc3ddb45d1d87cb530e2b9b8/8b22d823c8e67388-0c/s540x810/adb4fb4cfa4876e0c65caa7563c99a404343f46d.gifv">
       </div>
       <div class="half-image loading-icon">
         <img src="https://cdn.discordapp.com/attachments/926858719684354058/1215723914475348039/rend_the_cloud.gif?ex=66103f20&is=65fdca20&hm=1348967c43e91aa8ba65cfd01ce778cda6202adb0df52711de54d4dd1e258dbb&">
