--- a/lore.html
+++ b/lore.html
@@ -80,7 +80,7 @@
         <img src="https://64.media.tumblr.com/c9ecf011f7d6d258a0c60fedccd158d0/c0099088b576d111-5a/s540x810/bc5f030ee6fd4d40132b793356c50b8b3993d1d2.gifv">
       </div>
     <div class="half-image loading-icon">
-      <img src="https://cdn.discordapp.com/attachments/926858719684354058/1215717778653188126/Comp_18.gif?ex=66103969&is=65fdc469&hm=2d429c8597896af11785d96af9ec5bfce31ecec2b2813ed2826b8fac93542c74&">
+      <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/comp-16_orig.gif">
     </div>
     <div class="half-image loading-icon">
       <img src="https://64.media.tumblr.com/67e9d0ef5d95850cc6cd7ae048b06fa0/c0099088b576d111-a0/s540x810/3a6da926f3d72a65b384f26b54df59d76273be7c.gifv">
