--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
       <div class="item">
         <a href="lore.html">
-          <div class="image-container loading-icon"><img src="https://cdn.discordapp.com/attachments/926858719684354058/1215756242236997724/Comp_4.gif?ex=66105d3b&is=65fde83b&hm=2eba1eb16f497000a31100318c3cf15200eaaa93ea3d0ed8f348310c78102386&"></div>
+          <div class="image-container loading-icon"><img src="https://i.imgur.com/TMS7bwx.gif"></div>
           <span>Animated VTuber Lore Videos</span>
         </a>
       </div>
