--- a/mv.html
+++ b/mv.html
@@ -75,13 +75,13 @@
         <img src="https://64.media.tumblr.com/5b8d93c8cc3ddb45d1d87cb530e2b9b8/8b22d823c8e67388-0c/s540x810/adb4fb4cfa4876e0c65caa7563c99a404343f46d.gifv">
       </div>
       <div class="half-image loading-icon">
-        <img src="https://cdn.discordapp.com/attachments/926858719684354058/1215723914475348039/rend_the_cloud.gif?ex=66103f20&is=65fdca20&hm=1348967c43e91aa8ba65cfd01ce778cda6202adb0df52711de54d4dd1e258dbb&">
+        <img src="https://i.imgur.com/MZlj1RR.gif">
       </div>
       <div class="half-image loading-icon">
-        <img src="https://cdn.discordapp.com/attachments/926858719684354058/1215723915016544306/something_to_declare.gif?ex=66103f20&is=65fdca20&hm=24db0bc6b108a4cb742f08ab874d756b382eee5fd5d53438fb1581b47a07068a&">
+        <img src="https://i.imgur.com/HXk8CEl.gif">
       </div>
     <div class="half-image loading-icon">
-      <img src="https://cdn.discordapp.com/attachments/926858719684354058/1215723915767316540/swarm_2.gif?ex=66103f20&is=65fdca20&hm=f50a3a05580cbedbbece9ad928f322f72716141e5cca1146783d17773519ee3f&">
+      <img src="https://i.imgur.com/8wFJOPi.gif">
     </div>
     
   </div>
