--- a/lore.html
+++ b/lore.html
@@ -133,6 +133,10 @@
                   <div class="embed-container">
                     <iframe src="https://www.youtube.com/embed/PVW-pl2JdMs" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
                   </div>  <br>   
+
+                  <div class="embed-container">
+                    <iframe src="https://www.youtube.com/watch?v=n8IXpKRBsWQ" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+                  </div>  <br>   
                     <div class="embed-container">
                       <iframe src="https://www.youtube.com/embed/NqysS1OvF3E" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
                     </div>  <br>   
