--- a/trashtaste.html
+++ b/trashtaste.html
@@ -57,22 +57,25 @@
 
       <div class="art-display"><br>
         <div class="half-image loading-icon">
-          <img src="https://cdn.discordapp.com/attachments/926858719684354058/1154476986253709413/Comp_2.gif?ex=65fc757a&is=65ea007a&hm=66aa98b38f3f6affae1746396ae2ea025972177acebb03794fcc91b097de1723&">
+          <img src="https://64.media.tumblr.com/a0a7af2997816a0964dc4d057aa539fb/c67b19ef129ab74e-55/s540x810/a333cb8da57a3a81d6472bc286dd6dba98700bcd.gifv">
         </div>
         <div class="half-image loading-icon">
-          <img src="https://cdn.discordapp.com/attachments/926858719684354058/1154476988728361021/Comp_28.gif?ex=65fc757b&is=65ea007b&hm=2c5382296ca4e0486ec9214ade8354cfd67bfb42d4250844a40932dbb5fd0cda&">
+          <img src="https://64.media.tumblr.com/13137b85222654ea4f1e36d98d131de4/c67b19ef129ab74e-55/s540x810/d2150ebf00d3c4b484cc2a870e1d81f248a11976.gifv">
         </div>
       <div class="half-image loading-icon">
-        <img src="https://cdn.discordapp.com/attachments/926858719684354058/1154476989084868629/Comp_27.gif?ex=65fc757b&is=65ea007b&hm=b172c71643bb5562097b45d208fc25ebf48ca6d73c2531e69c0a23b7e1a02534&">
+        <img src="https://64.media.tumblr.com/20be0c5069cf911c924d07ae47277d8e/c67b19ef129ab74e-ab/s540x810/5a7aa97b543160055c52aae7e942bcc2d8a31f35.gifv">
       </div>
       <div class="half-image loading-icon">
-        <img src="https://cdn.discordapp.com/attachments/926858719684354058/1154476987776254123/Comp_30.gif?ex=65fc757b&is=65ea007b&hm=59f57a6ba75708e777bdfb7f69bcf7fc20cbd0624f06f001e8667331630a70f1&">
+        <img src="https://64.media.tumblr.com/3ee0e28c7769da3537717a0a04997a54/c67b19ef129ab74e-b2/s540x810/d15221046ff80a628cac94e40875bc436cb3dff0.gifv">
       </div>
       <div class="half-image loading-icon">
-        <img src="https://cdn.discordapp.com/attachments/926858719684354058/1154476987302285424/Comp_31.gif?ex=65fc757a&is=65ea007a&hm=4e1068d96ac952ae76435dc4055d2ba3a0f7678f4b5da6730125e2d41e96be45&">
+        <img src="https://64.media.tumblr.com/5bedb9113cb7f51c091dd827e268304a/c67b19ef129ab74e-d3/s540x810/771fc2cbdac6c6fba5c1e308f6eadf6fd1b68e11.gifv">
       </div>
       <div class="full-image loading-icon">
-        <img src="https://cdn.discordapp.com/attachments/926858719684354058/1154476986954162225/Comp_32.gif?ex=65fc757a&is=65ea007a&hm=77f7b56bc2676e867518c7f233522b44b325281eab159fd874cf335dcf1b0489&">
+        <img src="https://64.media.tumblr.com/5bedb9113cb7f51c091dd827e268304a/c67b19ef129ab74e-d3/s540x810/771fc2cbdac6c6fba5c1e308f6eadf6fd1b68e11.gifv">
+      </div>
+      <div class="full-image loading-icon">
+        <img src="https://64.media.tumblr.com/cf8029fdf5716992d64626b741bfc7eb/c67b19ef129ab74e-32/s1280x1920/f0f31e61d6ff9d3d443177594c30f37e5925ba2b.gifv">
       </div>
     </div>
 
