--- a/trashtaste.html
+++ b/trashtaste.html
@@ -71,10 +71,7 @@
       <div class="half-image loading-icon">
         <img src="https://64.media.tumblr.com/5bedb9113cb7f51c091dd827e268304a/c67b19ef129ab74e-d3/s540x810/771fc2cbdac6c6fba5c1e308f6eadf6fd1b68e11.gifv">
       </div>
-      <div class="full-image loading-icon">
-        <img src="https://64.media.tumblr.com/5bedb9113cb7f51c091dd827e268304a/c67b19ef129ab74e-d3/s540x810/771fc2cbdac6c6fba5c1e308f6eadf6fd1b68e11.gifv">
-      </div>
-      <div class="full-image loading-icon">
+      <div class="half-image loading-icon">
         <img src="https://64.media.tumblr.com/cf8029fdf5716992d64626b741bfc7eb/c67b19ef129ab74e-32/s1280x1920/f0f31e61d6ff9d3d443177594c30f37e5925ba2b.gifv">
       </div>
     </div>
