--- a/zines.html
+++ b/zines.html
@@ -57,32 +57,32 @@
 
       <div class="art-display"><br>
         <div class="half-image loading-icon">
-          <img src="https://media.discordapp.net/attachments/926858719684354058/1154453660848373810/Comp_35.gif?ex=65fc5fc1&is=65e9eac1&hm=56ea6a0d153617c3c3339d8013617e0f4b2052859df92b3389df4b1a33503c1f&=">
+          <img src="https://i.imgur.com/0qQwYFp.gif">
         </div>
         <div class="half-image loading-icon">
-          <img src="https://media.discordapp.net/attachments/926858719684354058/1154453661494280232/Comp_26.gif?ex=65fc5fc1&is=65e9eac1&hm=5381428d40e62fb9d08fc4f5c134a26900348fdf7dee282279efedcec5fad93b&=">
+          <img src="https://i.imgur.com/hs8TvAA.gif">
         </div>
       <div class="half-image loading-icon">
-        <img src="https://media.discordapp.net/attachments/926858719684354058/1154453662106660894/Comp_27.gif?ex=65fc5fc1&is=65e9eac1&hm=026f36587c8449bf8d5483ebf08b1c14b7610b15f0ebbfce497148f980848089&=">
+        <img src="https://i.imgur.com/2PBWNqb.gif">
       </div>
       <div class="half-image loading-icon">
-        <img src="https://media.discordapp.net/attachments/926858719684354058/1154453662605770872/Comp_28.gif?ex=65fc5fc1&is=65e9eac1&hm=077015c9956723cbd2b1b95b85dbec81e1000032228707316fc0a81761ceb8b5&=">
+        <img src="https://i.imgur.com/00UuR7W.gif">
       </div>
       <div class="half-image loading-icon">
-        <img src="https://media.discordapp.net/attachments/926858719684354058/1154453663184596992/Comp_29.gif?ex=65fc5fc2&is=65e9eac2&hm=d9c12050a55dc451b04a5763e5adab16a0db4c5cb243a3ed6a9b4ea48a54dccd&=">
+        <img src="https://i.imgur.com/ZwmJVGM.gif">
       </div>
       <div class="half-image loading-icon">
-        <img src="https://media.discordapp.net/attachments/926858719684354058/1154453663998279852/Comp_30.gif?ex=65fc5fc2&is=65e9eac2&hm=2c5a1899bc4ddc261af8a71e5d59cfbe5dee78b87d88d4318b3a0ab18a38dfea&=">
+        <img src="https://i.imgur.com/vz1KlTA.gif">
       </div>
     <div class="half-image loading-icon">
-      <img src="https://media.discordapp.net/attachments/926858719684354058/1154453664409337926/Comp_31.gif?ex=65fc5fc2&is=65e9eac2&hm=eb04b4372da6a1960aba546705b3fe748be27018e6e79a0e01db54a17dd8197f&=">
+      <img src="https://i.imgur.com/0v3ouJy.gif">
     </div>
     <div class="half-image loading-icon">
-      <img src="https://media.discordapp.net/attachments/926858719684354058/1154453664946204672/Comp_32.gif?ex=65fc5fc2&is=65e9eac2&hm=c891304e5b8b7e6c6f550cf3f8a146af7db19dea1cf4634058ba781ee38553c0&=">
+      <img src="https://i.imgur.com/qRxgcln.gif">
     </div>
 
     <div class="half-image loading-icon">
-      <img src="https://media.discordapp.net/attachments/926858719684354058/1154453665378222183/Comp_33.gif?ex=65fc5fc2&is=65e9eac2&hm=59154ceab7003bf1b30eac5ce977dd3d8563bcccdc9009f99cfc69a78f7d7e90&=">
+      <img src="https://i.imgur.com/oZlopsO.gif">
     </div>
 
     <div class="half-image loading-icon">
