--- a/vtuber.html
+++ b/vtuber.html
@@ -92,16 +92,16 @@
     
           <div class="art-display">
             <div class="half-image loading-icon">
-              <img src="https://cdn.discordapp.com/attachments/926858719684354058/1154593723733254225/Comp_33.gif?ex=660f5733&is=65fce233&hm=195ba054ac7219e805cb2a9accbd7c00f65aeff3d70db09d45a6bd56430e52c9&">
+              <img src="https://64.media.tumblr.com/f70f98c0876bf85f9eb8c87824f9f64c/ae65ddaac733d615-85/s540x810/b82ced40f7d7b16005badc9982d0409d60849638.gifv">
             </div>
             <div class="half-image loading-icon">
-              <img src="https://cdn.discordapp.com/attachments/926858719684354058/1154593724081385532/Comp_36.gif?ex=660f5733&is=65fce233&hm=b8d252fdb6086152d314304c09e166b74b32a70fa8c3ef4216017e22fd616760&">
+              <img src="https://64.media.tumblr.com/61fc1f9cfb46717a0507ee3dd9162c8c/ae65ddaac733d615-1c/s540x810/95b79c40adcdbd02995e6f2e2eb7a9eebbd80c32.gifv">
             </div>
             <div class="half-image loading-icon">
-              <img src="https://cdn.discordapp.com/attachments/926858719684354058/1154593724463071252/Comp_35.gif?ex=660f5733&is=65fce233&hm=00ed42c91367c47bb8499ffaaa0e22be524442faef462213dffd6ed04e747307&">
+              <img src="https://64.media.tumblr.com/61fc1f9cfb46717a0507ee3dd9162c8c/ae65ddaac733d615-1c/s540x810/95b79c40adcdbd02995e6f2e2eb7a9eebbd80c32.gifv">
             </div>
             <div class="half-image loading-icon">
-              <img src="https://cdn.discordapp.com/attachments/926858719684354058/1154593724890882169/Comp_34.gif?ex=660f5733&is=65fce233&hm=dc0cce77e91fe5bdd71bcfb88296a1997920e8fccf28c04fa0cc66b43dc2f3a2&">
+              <img src="https://64.media.tumblr.com/61fc1f9cfb46717a0507ee3dd9162c8c/ae65ddaac733d615-1c/s540x810/95b79c40adcdbd02995e6f2e2eb7a9eebbd80c32.gifv">
             </div>
 </div>
 
