--- a/zines.html
+++ b/zines.html
@@ -86,19 +86,17 @@
     </div>
 
     <div class="half-image loading-icon">
-      <img src="https://media.discordapp.net/attachments/926858719684354058/1154453720894017637/Comp_36.gif?ex=65fc5fcf&is=65e9eacf&hm=2dc87fa3fe0b018bd6161d62f8260894adbbf8bfdc7630f89c4be59ea90a116e&=">
+      <img src="https://i.imgur.com/2l1IC5w.gif">
     </div>
     <div class="half-image loading-icon">
-      <img src="https://media.discordapp.net/attachments/926858719684354058/1154453721380552734/Comp_37.gif?ex=65fc5fcf&is=65e9eacf&hm=80d64265185575598dc3ed3ed981dcc85553e09236c38bbf3b88266a7348d0e6&=">
+      <img src="https://i.imgur.com/jISwXhm.gif">
     </div>
   <div class="half-image loading-icon">
-    <img src="https://media.discordapp.net/attachments/926858719684354058/1154453721783210107/Comp_38.gif?ex=65fc5fcf&is=65e9eacf&hm=0486ede5ccb6acbc39318ce4bc97fe6e56b9d8032d34f64798895810ffe29a43&=">
+    <img src="https://i.imgur.com/gEowJYb.gif">
   </div>
-  <div class="https://media.discordapp.net/attachments/926858719684354058/1154453722261377044/Comp_39.gif?ex=65fc5fd0&is=65e9ead0&hm=2f413625ba4bfda8d501e3ac86ceb145b01fcc4676e12c7e192689462e97ab99&=">
+  <div class="https://i.imgur.com/vpdXp77.gif">
   </div>
-  <div class="half-image loading-icon">
-    <img src="https://media.discordapp.net/attachments/926858719684354058/1154453722697564170/Comp_40.gif?ex=65fc5fd0&is=65e9ead0&hm=9f4564b053d116a96cf77fcd19aa8b86a85291c2be8f2ef267aed4de6cf3a465&=">
-  </div>
+
 
     </div>
 
