--- a/nexon.html
+++ b/nexon.html
@@ -102,7 +102,7 @@
         </div> 
         <br>
         <div class="embed-container">
-          <iframe src="https://www.youtube.com/watch?v=RAX105k7qtU" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+          <iframe src="https://www.youtube.com/embed/RAX105k7qtU" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
         </div>    
         <div class="embed-container">
           <iframe src="https://www.youtube.com/embed/y9Ha3zGc74s" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
