--- a/index.html
+++ b/index.html
@@ -59,6 +59,14 @@
         </a>
       </div>
 
+
+      <div class="item">
+        <a href="anniversary.html">
+          <div class="image-container loading-icon"><img src="https://64.media.tumblr.com/331778f68f17c6c6c966d695fb641e15/3639fee865b8cb1d-28/s400x600/4244742691ea23062ac4049918d51f0629a1d0f4.gifv" alt="anniversary"></div>
+          <span>MapleStory 19th Anniversary</span>
+        </a>
+      </div>
+
       <div class="item">
         <a href="lore.html">
           <div class="image-container loading-icon"><img src="https://i.imgur.com/TMS7bwx.gif"></div>
@@ -142,12 +150,6 @@
                 <span>Personal Art</span>            </a>
               </div>
 
-              <div class="item">
-                <a href="trashtaste.html">
-                  <div class="image-container loading-icon"><img src="https://64.media.tumblr.com/331778f68f17c6c6c966d695fb641e15/3639fee865b8cb1d-28/s400x600/4244742691ea23062ac4049918d51f0629a1d0f4.gifv" alt="trash taste"></div>
-                  <span>Trash Taste Podcast Europe Tour</span>
-                </a>
-              </div>
 
 
 
