--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
       <div class="item">
         <a href="anniversary.html">
-          <div class="image-container loading-icon"><img src="https://64.media.tumblr.com/331778f68f17c6c6c966d695fb641e15/3639fee865b8cb1d-28/s400x600/4244742691ea23062ac4049918d51f0629a1d0f4.gifv" alt="anniversary"></div>
+          <div class="image-container loading-icon"><img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExNDU1ZmZrdnIzeHlkY2tvNmkzMWk5aDd4ZWVmbzZxa2h3MGk1NWJ3dSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/7IqrFpGGYgJ6aiFuWa/giphy.gif" alt="anniversary"></div>
           <span>MapleStory 19th Anniversary</span>
         </a>
       </div>
