--- a/anniversary.html
+++ b/anniversary.html
@@ -60,7 +60,7 @@
 
         <div class="full-image">
           <div class="embed-container">
-            <iframe src="https://www.youtube.com/watch?v=t-yGI_8DJU8" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+            <iframe src="https://www.youtube.com/embed/t-yGI_8DJU8" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
           </div> 
           <br>
         </div>
@@ -75,10 +75,6 @@
           <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExMGpvZ3UyYng1Y3p5a3d1c3d1Zjk4NTM4czhlaGtuNGNyeTczaGNvayZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/ny0D9SC0WCvwDcKGtq/giphy.gif">
         </div>
 
-
-        <div class="half-image loading-icon">
-          <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExajBiaGhtdGE0bG1jeHd3cDYwMDlwNXZrcjdmMndmdGpoOGRoZmdkYSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/4LWkxUnT8LJk76jRtp/giphy.gif">
-        </div>
 
 
         <div class="half-image loading-icon">
