--- a/anniversary.html
+++ b/anniversary.html
@@ -67,34 +67,34 @@
 
 
         <div class="half-image loading-icon">
-          <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExZWk3d2I3dHNlM2QyYnVxZG50cmtoN3U0MjM0Mnk4YWt4enhqaDl2diZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/1esDhOtfhSvush3WZt/giphy.gif">
+          <img src="https://64.media.tumblr.com/6f64c4416386bde9e537cb553da2038b/a191d07e82b5cda9-4a/s540x810/a6b8e8d0ba92dcb9e0297dbe3d9fe652783483e2.gifv">
         </div>
 
 
 
         <div class="half-image loading-icon">
-          <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExMGpvZ3UyYng1Y3p5a3d1c3d1Zjk4NTM4czhlaGtuNGNyeTczaGNvayZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/ny0D9SC0WCvwDcKGtq/giphy.gif">
+          <img src="https://64.media.tumblr.com/7d7177a0e05596494d705ba4adedde0b/a191d07e82b5cda9-ae/s540x810/e4ddce111bb8eb124508d0313e99df64cb57eff6.gifv">
         </div>
 
 
 
         <div class="half-image loading-icon">
-          <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExNDFveDEzaDdqeXA1ZmppY2RudG1pOXBvc2hsMmxzbG1oMnlpNzhkZiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/is9gbdvNqhYwucNrnO/giphy.gif">
+          <img src="https://64.media.tumblr.com/3ecc6a51a866ff4d11e84a0853564406/a191d07e82b5cda9-ee/s540x810/6bfac7c5f5ef066489b4d3cb6479417667d7a43c.gifv">
         </div>
     
 
         
     <div class="half-image loading-icon">
-      <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExZG83aGlka2V4c3d2cnJuaWtocmF5eDZxcXphNDdoaW5hcjNkYjVuOSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/3wLIviMQZwB7CiwQQX/giphy.gif">
+      <img src="https://64.media.tumblr.com/b97ff8e36bcc69676344664eaf86415d/a191d07e82b5cda9-33/s540x810/2d1f5c2918821d62bdb1ea0d60d902580bab7867.gifv">
     </div>
 
     <div class="half-image loading-icon">
-      <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExb3d0d3Y0YWQybmxpbWtnc3cydDc5MzR3ZGVnd3UzY3cybjc5a2VudiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/qC7MHHMFbkKQJxEnU2/giphy.gif">
+      <img src="https://64.media.tumblr.com/28a5a9d6639791de82d06f337583939b/a191d07e82b5cda9-9a/s540x810/f798070518406f5ce02e8d6d24cf82744463ee4e.gifv">
     </div>
 
 
         <div class="half-image loading-icon">
-          <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExNWZrZGs4eGNuZnBtdDcxZHd5MnpueXVtbnp5M2d0cnFtcHJmbjc3ZyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/j7u4hXgMtmxxyyLqON/giphy.gif">
+          <img src="https://64.media.tumblr.com/fbaa051e4dfecc1f38e95e08da786103/a191d07e82b5cda9-0d/s540x810/a5c7910b5833650998b2b1d4be722ae4ecb6484c.gifv">
         </div>
 
 
