--- a/index.html
+++ b/index.html
@@ -50,6 +50,21 @@
       </a>
     </div>
     <div id="content">
+      
+
+      <div class="item">
+        <a href="anniversary.html">
+          <div class="image-container loading-icon"><img src="https://64.media.tumblr.com/252e5ad30936c8e75cb6b6347394f7a3/a191d07e82b5cda9-50/s400x600/3f03884f464c9743a283ef2cbc762addcb3e9068.gifv" alt="anniversary"></div>
+          <span>MapleStory 19th Anniversary</span>
+        </a>
+      </div>
+
+      <div class="item">
+        <a href="gowest.html">
+          <div class="image-container loading-icon"><img src="https://64.media.tumblr.com/03da9daae438171e7df9101fc233cf4c/fd5dfbed93079f20-00/s400x600/4df12ae96d3c811de696a8a20e29344ddbb1deff.gifv" alt="anniversary"></div>
+          <span>MapleStory GO WEST! Trailer</span>
+        </a>
+      </div>
 
 
       <div class="item">
@@ -59,13 +74,6 @@
         </a>
       </div>
 
-
-      <div class="item">
-        <a href="anniversary.html">
-          <div class="image-container loading-icon"><img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExNDU1ZmZrdnIzeHlkY2tvNmkzMWk5aDd4ZWVmbzZxa2h3MGk1NWJ3dSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/7IqrFpGGYgJ6aiFuWa/giphy.gif" alt="anniversary"></div>
-          <span>MapleStory 19th Anniversary</span>
-        </a>
-      </div>
 
       <div class="item">
         <a href="lore.html">
