--- a/gowest.html
+++ b/gowest.html
@@ -60,7 +60,7 @@
 
         <div class="full-image">
           <div class="embed-container">
-            <iframe src="https://64.media.tumblr.com/baa727a13df807aa7019596867ced777/fd5dfbed93079f20-4b/s540x810/405c9626a9a4cdc1f02008445aa713a597065031.gifv" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+            <iframe src="https://www.youtube.com/embed/lRq6L98CgMU?si=hrrzXPzs3erEq-nj" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
           </div> 
           <br>
         </div>
@@ -75,11 +75,6 @@
           <img src="https://64.media.tumblr.com/450dab25241440563d7287fb0f611548/fd5dfbed93079f20-fc/s540x810/949597bf1211289d8cdb310516cf81cf3cc35851.gifv">
         </div>
 
-
-
-        <div class="half-image loading-icon">
-          <img src="hhttps://64.media.tumblr.com/fbf718d4593933f071aa14ebe2114f78/fd5dfbed93079f20-fd/s540x810/95d7ce8eeb5ada14bfc7abd6f136b8ad625eaf89.gifv">
-        </div>
 
 
 
