--- a/gowest.html
+++ b/gowest.html
@@ -107,6 +107,24 @@
         </div>
 
 
+        
+      <div id="content">
+        <!-- Section 1 -->
+        <div class="art-section">
+          <div class="art-header">
+            <h2>Behind the Scenes</h2>
+          </div>
+    
+          <div class="art-display">
+            <div class="half-image loading-icon">
+              <img src="https://64.media.tumblr.com/8ffaf6265407b72b21207d9474e15bbb/f029e93e3f82bf67-41/s2048x3072/573b223b72f26679d3eb91fc6fd22b364390da14.jpg">
+            </div>
+            <div class="half-image loading-icon">
+              <img src="https://64.media.tumblr.com/83be2495ae9955e18cf718a4d98fad84/f029e93e3f82bf67-af/s2048x3072/78daa17bc90c147a691c4b0cbc7b8c79deeed213.jpg">
+            </div></div>
+
+
+
 
     </div>
 
