--- a/gowest.html
+++ b/gowest.html
@@ -79,7 +79,11 @@
 
 
         <div class="half-image loading-icon">
-          <img src="https://64.media.tumblr.com/6d243791f40af5a9e231538cdcdbf269/fd5dfbed93079f20-6e/s540x810/a37ad4ed9c430e36a57c9d576ba5e3a7c8a0806a.gifv">
+          <img src="https://64.media.tumblr.com/ddd3105fd5c82cd9a9667f46ce604a9c/fd5dfbed93079f20-70/s540x810/2cfb863690a0744f4f4fd3f5cacc22accc3bbfca.gifv">
+        </div>
+
+        <div class="half-image loading-icon">
+          <img src="https://64.media.tumblr.com/fbf718d4593933f071aa14ebe2114f78/fd5dfbed93079f20-fd/s540x810/95d7ce8eeb5ada14bfc7abd6f136b8ad625eaf89.gifv">
         </div>
     
 
