--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
   <div id="content">
     <div id="about-content">
       <div>
-        <img src="https://cdn.discordapp.com/attachments/827751000226922560/1215713947366199316/IMG_9071.png?ex=66804557&is=667ef3d7&hm=4692aa617446746c23ac7fb8d05992fda5f4ec9d71d3d8f4f6c8c7e5341e78d2&">
+        <img src="https://64.media.tumblr.com/7d38d4f3bde6a05d7ccafbc1cf69f353/a2cdeab32f2bccf3-9f/s1280x1920/f2d7748aaaddbc24325d555e3e2319866dc0f560.jpg">
       </div>
       <div>
           <h2>Hello, I'm Kathleen! ✨</h2>
