--- a/anniversary.html
+++ b/anniversary.html
@@ -111,10 +111,10 @@
         </div>
   
         <div class="art-display">
-          <div class="half-image loading-icon">
+          <div class="full-image loading-icon">
             <img src="https://64.media.tumblr.com/762863ad2ccfe57692076f59660ac9d5/f029e93e3f82bf67-2f/s2048x3072/1467c2e3e4c4184c1c109dde83489dcb371bf5ce.jpg">
           </div>
-          <div class="half-image loading-icon">
+          <div class="full-image loading-icon">
             <img src="https://64.media.tumblr.com/0b886e41f8dcd86735d1f10884b7d864/f029e93e3f82bf67-64/s2048x3072/a51fda40ce13df743e5d76624591c74d7f8d68b1.jpg">
           </div></div>
 
