--- a/lore.html
+++ b/lore.html
@@ -135,7 +135,7 @@
                   </div>  <br>   
 
                   <div class="embed-container">
-                    <iframe src="https://www.youtube.com/watch?v=n8IXpKRBsWQ" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/n8IXpKRBsWQ" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
                   </div>  <br>   
                     <div class="embed-container">
                       <iframe src="https://www.youtube.com/embed/NqysS1OvF3E" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
