--- a/anniversary.html
+++ b/anniversary.html
@@ -52,7 +52,7 @@
     <div class="art-section">
       <div class="art-header">
         <h2>MapleStory 19th Anniversary Video</h2>
-        <p>Designed and animated the MapleStory 19th Anniversary video celebrating 19 years since the game's launch in the US.</p>
+        <p>Designed and animated the MapleStory 19th Anniversary video celebrating 19 years since the game's launch in the US. I handled all the scene layouts such as character sticker placement, photograph placement, placement of surrounding objects, shadows, font selection, and all the animation/transitions.</p>
       </div>
 
       <div class="art-display"><br>
