--- a/gowest.html
+++ b/gowest.html
@@ -52,7 +52,7 @@
     <div class="art-section">
       <div class="art-header">
         <h2>MapleStory GO WEST! Promotional Trailer</h2>
-        <p>I did the trailer for MapleStory's GO WEST! update, which promoted the new features coming to the game. I handled all the motion graphics, scene layouts, background creation, transitions, and animations. </p>
+        <p>I did the trailer for MapleStory's GO WEST! update, which promoted the new features coming to the game. Stakeholders wanted a video that was comedic, chaotic, tongue-in-cheek, and meme-worthy while still looking visually interesting. I handled all the motion graphics, scene layouts, background creation, transitions, and animations. </p>
       </div>
 
       <div class="art-display"><br>
