--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
   <div id="content">
     <div id="about-content">
       <div>
-        <img src="https://64.media.tumblr.com/7d38d4f3bde6a05d7ccafbc1cf69f353/a2cdeab32f2bccf3-9f/s1280x1920/f2d7748aaaddbc24325d555e3e2319866dc0f560.jpg">
+        <img src="https://64.media.tumblr.com/6842da20a9ea745f31f6a5ecec7ad528/a2cdeab32f2bccf3-25/s1280x1920/07d053c694b228abbaa1ece1253acdd05c3e61d1.webp">
       </div>
       <div>
           <h2>Hello, I'm Kathleen! ✨</h2>
