--- a/index.html
+++ b/index.html
@@ -66,6 +66,13 @@
         </a>
       </div>
 
+            <div class="item">
+        <a href="stargazer.html">
+          <div class="image-container loading-icon"><img src="https://64.media.tumblr.com/550451590fdbe399b0468e8ce27bac3c/865815eaf6be4603-1a/s400x600/c45ebed5c529bd59a73e2d10b496684a0a205326.gifv" alt="stargazer"></div>
+          <span>MapleStory STARGAZER Trailers</span>
+        </a>
+      </div>
+
 
       <div class="item">
         <a href="nexon.html">
@@ -90,12 +97,6 @@
         </a>
       </div>
   
-      <div class="item">
-        <a href="ads.html">
-          <div class="image-container loading-icon"><img src="https://media.giphy.com/media/BWigEIB18I5wdEFxPR/giphy.gif" alt="e3 booth monitors"></div>
-          <span>Advertisements for IGN</span>
-        </a>
-      </div>
 
       <div class="item">
         <a href="mv.html">
