--- a/stargazer.html
+++ b/stargazer.html
@@ -52,22 +52,10 @@
     <div class="art-section">
       <div class="art-header">
         <h2>MapleStory STARGAZER Promotional Trailers</h2>
-        <p>I did two trailers for MapleStory's STARGAZER update, which promoted the new features coming to the game. For Part 1, stakeholders wanted a video that was representative of a rock concert and the new character Sia, which heavily foxuses on stars and galaxy themes. For Part 2, stakeholders wanted a video that was focused on sprite animations and beachy themes to match the summer release date. I handled all the motion graphics, scene layouts, background creation, transitions, visual narrative execution, and animations. </p>
+        <p>I did two trailers for MapleStory's STARGAZER update, which promoted the new features coming to the game. I handled all the motion graphics, scene layouts, background creation, transitions, visual narrative execution, and animations. </p>
       </div>
 
       <div class="art-display"><br>
-
-
-        <div class="full-image">
-            <div class="embed-container">
-            <iframe src="https://www.youtube.com/embed/AXwskrq2PHs" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-          </div> 
-          <br>
-          <div class="embed-container">
-            <iframe src="https://www.youtube.com/embed/X3q5cfpGO0A" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-          </div> 
-          <br>
-        </div>
 
 
               <div id="content">
@@ -75,6 +63,7 @@
         <div class="art-section">
           <div class="art-header">
             <h2>Part 1</h2>
+            <p> For Part 1, stakeholders wanted a video that was representative of a rock concert and the new character Sia, which heavily foxuses on stars and galaxy themes.</p>
           </div>
 
            <div class="full-image">
@@ -117,6 +106,7 @@
         <div class="art-section">
           <div class="art-header">
             <h2>Part 2</h2>
+            <p>For Part 2, stakeholders wanted a video that was focused on sprite animations and beachy themes to match the summer release date.</p>
           </div>
 
           <div class="embed-container">
@@ -127,11 +117,32 @@
     
           <div class="art-display">
             <div class="full-image loading-icon">
-              <img src="https://64.media.tumblr.com/8ffaf6265407b72b21207d9474e15bbb/f029e93e3f82bf67-41/s2048x3072/573b223b72f26679d3eb91fc6fd22b364390da14.jpg">
+              <img src="https://64.media.tumblr.com/00661dc09d18205a7131f7254ff6687a/dc3c6c98c4de353c-6f/s540x810/f90c9154c72cfb7903e947059f188741eeefa8df.gifv">
             </div>
             <div class="full-image loading-icon">
-              <img src="https://64.media.tumblr.com/83be2495ae9955e18cf718a4d98fad84/f029e93e3f82bf67-af/s2048x3072/78daa17bc90c147a691c4b0cbc7b8c79deeed213.jpg">
-            </div></div>
+              <img src="https://64.media.tumblr.com/8f2b6197a721ee9973bbeb66a72d392f/dc3c6c98c4de353c-23/s540x810/c7c58771da0db69561b043604e41b7d701b9b19e.gifv">
+            </div>
+
+                        <div class="full-image loading-icon">
+              <img src="https://64.media.tumblr.com/7eb932794dbfdebe8a04b6735d73cc2b/dc3c6c98c4de353c-a9/s540x810/3b70feefc4da5f0391514dd928d3f4ebf8567714.gifv">
+            </div>
+
+
+                        <div class="full-image loading-icon">
+              <img src="https://64.media.tumblr.com/dc8e638b96a9f65d569c24547d590f1b/dc3c6c98c4de353c-16/s540x810/0b586cb6f737da6de5127658848d2912075085cf.gifv">
+            </div>
+
+
+                        <div class="full-image loading-icon">
+              <img src="https://64.media.tumblr.com/2e1c6016160738ac2c5770ef8b482365/dc3c6c98c4de353c-2a/s540x810/4c69c42e7316bb32b914afbaa5ee1d91ee11140e.gifv">
+            </div>
+
+   <div class="full-image loading-icon">
+              <img src="https://64.media.tumblr.com/2fbe7384e88a734c09d6ea88cd40ccf4/dc3c6c98c4de353c-bc/s540x810/6032b271202adcd3c61986071f9193d6fe58dda1.gifv">
+            </div>
+
+
+          </div>
 
 
 
