--- a/stargazer.html
+++ b/stargazer.html
@@ -53,7 +53,7 @@
       <div class="art-header">
         <h2>MapleStory STARGAZER Promotional Trailers</h2>
         <p>I did two trailers for MapleStory's STARGAZER update, which promoted the new features coming to the game. I handled all the motion graphics, scene layouts, background creation, transitions, visual narrative execution, and animations. </p>
-      </div>
+      </div> </div>
 
       <div class="art-display">
 
@@ -69,6 +69,7 @@
             <div class="embed-container">
             <iframe src="https://www.youtube.com/embed/AXwskrq2PHs" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
           </div> 
+          <br>
         </div>
 
           <div class="art-display">
@@ -110,6 +111,7 @@
           <div class="embed-container">
             <iframe src="https://www.youtube.com/embed/X3q5cfpGO0A" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
         </div>
+        <br>
     
           <div class="art-display">
             <div class="half-image loading-icon">
