--- a/vtuber.html
+++ b/vtuber.html
@@ -56,8 +56,14 @@
       </div>
 
       <div class="art-display">
+                <div class="half-image loading-icon">
+          <img src="https://carrd.co/dashboard/shared/3130170638600624/build/asset/8e04a5d83596a38d9e28b5bb474e9b20">
+        </div>
         <div class="half-image loading-icon">
           <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/yumprincess-debut_orig.gif">
+        </div>
+                <div class="half-image loading-icon">
+          <img src="https://carrd.co/dashboard/shared/3130170638600624/build/asset/a109212c7677837a73e3bcd439e05850">
         </div>
         <div class="half-image loading-icon">
           <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/aby_orig.gif">
@@ -114,6 +120,10 @@
 
       <div class="full-image">
         <div class="embed-container">
+                  <div class="embed-container">
+          <iframe src="https://www.youtube.com/embed/Z-bA-iuW36E" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+        </div>    
+        <br>     
           <iframe src="https://www.youtube.com/embed/7lXA1FbE7xY" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
         </div>
         <br>    
@@ -124,10 +134,6 @@
         <div class="embed-container">
           <iframe src="https://www.youtube.com/embed/BKFy4Dxw2H4" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
         </div> 
-        <br>     
-        <div class="embed-container">
-          <iframe src="https://www.youtube.com/embed/fyRSLAo_1Zw" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-        </div>    
         <br>     
         <div class="embed-container">
           <iframe src="https://www.youtube.com/embed/xp3uFdB7BH4" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
