--- a/vtuber.html
+++ b/vtuber.html
@@ -57,13 +57,10 @@
 
       <div class="art-display">
                 <div class="half-image loading-icon">
-          <img src="https://carrd.co/dashboard/shared/3130170638600624/build/asset/8e04a5d83596a38d9e28b5bb474e9b20">
+          <img src="https://64.media.tumblr.com/3214df36ee8e02c8c9dce339d6dfb980/f97fe4b2fca00d68-ad/s640x960/d4efe9a5a7aaffdf861613006fc8a23e352c9dba.gifv">
         </div>
         <div class="half-image loading-icon">
           <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/yumprincess-debut_orig.gif">
-        </div>
-                <div class="half-image loading-icon">
-          <img src="https://carrd.co/dashboard/shared/3130170638600624/build/asset/a109212c7677837a73e3bcd439e05850">
         </div>
         <div class="half-image loading-icon">
           <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/aby_orig.gif">
