--- a/vtuber.html
+++ b/vtuber.html
@@ -121,6 +121,7 @@
           <iframe src="https://www.youtube.com/embed/Z-bA-iuW36E" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
         </div>    
         <br>     
+             <div class="embed-container">
           <iframe src="https://www.youtube.com/embed/7lXA1FbE7xY" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
         </div>
         <br>    
