--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
 
 
       <div class="item">
-        <a href="shows.html">
-          <div class="image-container loading-icon"><img src="https://64.media.tumblr.com/10c3e2ebde47de6cdbc00eadf639b69f/3639fee865b8cb1d-80/s400x600/2acd911cd84793396215d6ea38ad5794d479cdc5.gifv"></div>
-          <span>IGN Shows & Podcasts Graphics</span>
+        <a href="toggles.html">
+          <div class="image-container loading-icon"><img src="https://64.media.tumblr.com/9b6bdf862880ea18f338ffa2beb5343a/f97fe4b2fca00d68-dd/s400x600/d04a9985aaf99085706b6062c559bd53d112af76.gifv"></div>
+          <span>Twitch Pop-Up Toggles</span>
         </a>
       </div>
   
