--- a/toggles.html
+++ b/toggles.html
@@ -56,19 +56,19 @@
       </div>
 
       <div class="art-display">
-        <div class="full-image loading-icon">
+        <div class="half-image loading-icon">
           <img src="https://64.media.tumblr.com/3537f38774f6b200f198109eb3478274/f97fe4b2fca00d68-78/s500x750/6f868df9e1437bb165bf5210ae6bf2d73b13ec3d.gifv">
         </div>
-                <div class="full-image loading-icon">
+                <div class="half-image loading-icon">
           <img src="https://64.media.tumblr.com/b9604ce7ce9aacaee27cd055e3cb3e52/f97fe4b2fca00d68-87/s1280x1920/0642ffa100d2cf74ebf0f6af23708ffb811043e9.gifv">
         </div>
-        <div class="full-image loading-icon">
+        <div class="half-image loading-icon">
           <img src="https://64.media.tumblr.com/b9f5ca7823c041debdd8aa0d17ff2ef7/f97fe4b2fca00d68-1b/s640x960/29f47baab175a2c2540a81613e2a8847d5d5fc96.gifv">
         </div>
-        <div class="full-image loading-icon">
+        <div class="half-image loading-icon">
           <img src="https://64.media.tumblr.com/4223be5c925071655a1678ec96508bcb/f97fe4b2fca00d68-65/s1280x1920/7a99624ae926da2ef76ab30cfa10ef81f50465a9.gifv">
         </div>
-        <div class="full-image loading-icon">
+        <div class="half-image loading-icon">
         <img src="https://64.media.tumblr.com/5d8fa8d2f89113bd4f7042876e318722/f97fe4b2fca00d68-e6/s640x960/991194f8d86a4c99f9cdb98ffa048fec6f3eb98a.gifv">
       </div>
 
