--- a/toggles.html
+++ b/toggles.html
@@ -52,7 +52,7 @@
     <div class="art-section">
       <div class="art-header">
         <h2>Twitch Stream Pop-Up Toggles</h2>
-        <p>"Pop Up Toggles" are Twitch stream toggles that I came up with to make it easier for new viewers to learn about a streamer from a raid or to remind people of chat rules. They are visually more fun to look at compared to a bot automated chat reminder because they "pop up" (hence the name) on stream and are custom designed to fit the client's aesthetic. A base character art is provided by the client and I handle all aspects of design and animation surrounding the art.</p>
+        <p>"Pop Up Toggles" are Twitch stream toggles that I came up with to make it easier for new viewers to learn about a streamer from a raid or to remind people of chat rules. They are visually more engaging to look at compared to a bot automated chat reminder because they "pop up" (hence the name) on stream and are custom designed to fit the client's aesthetic. A base character art is provided by the client and I handle all aspects of design and animation surrounding the art.</p>
       </div>
 
       <div class="art-display">
@@ -62,7 +62,7 @@
                 <div class="half-image loading-icon">
           <img src="https://64.media.tumblr.com/3537f38774f6b200f198109eb3478274/f97fe4b2fca00d68-78/s500x750/6f868df9e1437bb165bf5210ae6bf2d73b13ec3d.gifv">
         </div>
-                       <div class="half-image loading-icon">
+                       <div class="half-image">
           <img src="https://64.media.tumblr.com/03b1567ebf27f6ec081192fc642f4fa1/f97fe4b2fca00d68-f6/s1280x1920/3079a192df12ac3f42a8f78a8d5ffb630479ff25.gifv">
         </div>
                 
@@ -72,12 +72,12 @@
         <div class="half-image">
           <img src="https://64.media.tumblr.com/b9f5ca7823c041debdd8aa0d17ff2ef7/f97fe4b2fca00d68-1b/s640x960/29f47baab175a2c2540a81613e2a8847d5d5fc96.gifv">
         </div>
-        <div class="half-image loading-icon">
-          <img src="https://64.media.tumblr.com/4223be5c925071655a1678ec96508bcb/f97fe4b2fca00d68-65/s1280x1920/7a99624ae926da2ef76ab30cfa10ef81f50465a9.gifv">
-        </div>
         <div class="half-image">
         <img src="https://64.media.tumblr.com/5d8fa8d2f89113bd4f7042876e318722/f97fe4b2fca00d68-e6/s640x960/991194f8d86a4c99f9cdb98ffa048fec6f3eb98a.gifv">
       </div>
+           <div class="half-image loading-icon">
+          <img src="https://64.media.tumblr.com/4223be5c925071655a1678ec96508bcb/f97fe4b2fca00d68-65/s1280x1920/7a99624ae926da2ef76ab30cfa10ef81f50465a9.gifv">
+        </div>
 
         
 
