--- a/animation.html
+++ b/animation.html
@@ -57,6 +57,14 @@
 
 
       <div class="art-display">
+              <div class="half-image loading-icon">
+        <img src="https://64.media.tumblr.com/1bebfe9db4814cce7d3c5ac072584578/d545466189d0a74e-ad/s540x810/86f3b4e86d85887cda55d465cd676d768c3dc747.gifv">
+
+      </div>
+            <div class="half-image loading-icon">
+        <img src="https://64.media.tumblr.com/b7c05146072f9eece56467463a13dc52/d545466189d0a74e-63/s540x810/20968bf8ef19492d599378f81ed22aabee127962.gifv">
+
+      </div>
         <div class="half-image loading-icon">
           <img src="https://64.media.tumblr.com/c593bc073ff75a27542322e98b175255/f7ce94b7df52147b-11/s540x810/cfa45f85990694ecba6bb74bc11474972ea1e973.gifv">
         </div>
@@ -74,11 +82,15 @@
       </div>
       <div class="half-image loading-icon">
         <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExcmtkNXBzenJyZThpNWtraGoxbWN3NGdrYXRyZWsyeG5ncm10MDB6ZSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/XZniudbPDid9SPRw8A/giphy.gif">
+
       </div>
     </div>
 
 
       <div class="art-display">
+          <div class="half-image loading-icon">
+        <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3https://64.media.tumblr.com/e0c8429ab597f7c90c84facee1132e7a/d545466189d0a74e-43/s640x960/8b20c3d7cc564f31642f21ca9ab28d30554cc651.gifv">
+      </div>
       <div class="half-image loading-icon">
         <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExYjA0M3NhZjZvb3ZpMTR2YXJweTU1cHJxY2FhdDd2bzRmNWl1MmlieSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/0Ccq0GYLMLojw5RgPt/giphy.gif">
       </div>
