--- a/animation.html
+++ b/animation.html
@@ -89,7 +89,7 @@
 
       <div class="art-display">
           <div class="half-image loading-icon">
-        <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3https://64.media.tumblr.com/e0c8429ab597f7c90c84facee1132e7a/d545466189d0a74e-43/s640x960/8b20c3d7cc564f31642f21ca9ab28d30554cc651.gifv">
+        <img src="https://64.media.tumblr.com/e0c8429ab597f7c90c84facee1132e7a/d545466189d0a74e-43/s640x960/8b20c3d7cc564f31642f21ca9ab28d30554cc651.gifv">
       </div>
       <div class="half-image loading-icon">
         <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExYjA0M3NhZjZvb3ZpMTR2YXJweTU1cHJxY2FhdDd2bzRmNWl1MmlieSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/0Ccq0GYLMLojw5RgPt/giphy.gif">
