--- a/animation.html
+++ b/animation.html
@@ -59,7 +59,8 @@
       <div class="art-display">
                   <div class="half-image loading-icon">
         <img src="https://64.media.tumblr.com/e0c8429ab597f7c90c84facee1132e7a/d545466189d0a74e-43/s640x960/8b20c3d7cc564f31642f21ca9ab28d30554cc651.gifv">
-      </div><br>
+      </div><br></div>
+            <div class="art-display">
               <div class="half-image loading-icon">
         <img src="https://64.media.tumblr.com/1bebfe9db4814cce7d3c5ac072584578/d545466189d0a74e-ad/s540x810/86f3b4e86d85887cda55d465cd676d768c3dc747.gifv">
 
