--- a/animation.html
+++ b/animation.html
@@ -57,7 +57,7 @@
 
 
       <div class="art-display">
-                  <div class="half-image loading-icon">
+                  <div class="half-image loading-icon center">
         <img src="https://64.media.tumblr.com/e0c8429ab597f7c90c84facee1132e7a/d545466189d0a74e-43/s640x960/8b20c3d7cc564f31642f21ca9ab28d30554cc651.gifv">
       </div><br></div>
             <div class="art-display">
