--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
 
           <p>I'm a designer and mograph gal working remotely in California with a passion for art, anime, and video games. I love exploring ways design and motion can connect brands with communities, artists, and entertainers. Fandoms are where I thrive! </p>
 
-          <p>Outside of the hustle, you can find me watching vtubers, streaming Genshin Impact on Twitch, and collecting cute plushies.</p>  
+          <p>Outside of the hustle, you can find me watching vtubers, tabling at conventions, and collecting cute plushies.</p>  
             
             <p>If you need someone to press buttons while talking about the latest anime, I'm your gal 😌</p>
 
