--- a/animation.html
+++ b/animation.html
@@ -52,7 +52,7 @@
     <div class="art-section">
       <div class="art-header">
         <h2>Animated Artwork</h2>
-        <p>Various animated artworks done in After Effects. Artwork was pre-drawn by other artists.</a></p>
+        <p>Various animated/puppeted artworks done in After Effects. Artwork was pre-drawn by other artists.</a></p>
         </div>
 
 
