--- a/index.html
+++ b/index.html
@@ -104,7 +104,12 @@
       </a>
     </div>
   
-
+          <div class="item">
+            <a href="bluearchive.html">
+              <div class="image-container loading-icon"><img src="https://64.media.tumblr.com/03f5a50db4e16647f1bf06ff0ea5b6f5/d545466189d0a74e-c4/s400x600/ed2abfccff8d8893ba4cff0a57952b997824cb45.gifv"></div>
+              <span>Blue Archive Social Videos</span>
+            </a>
+          </div>
 
     
     <div class="item">
@@ -138,12 +143,6 @@
             
 
 
-          <div class="item">
-            <a href="manga.html">
-              <div class="image-container loading-icon"><img src="https://media.giphy.com/media/DCWHrUm3WEGpNWN0RO/giphy.gif"></div>
-              <span>Motion Manga, Art, and GIFs (for fun!)</span>
-            </a>
-          </div>
 
 
 
